Displaying the user's catalogs and displaying the products in the catalog

--- a/mobile/QR/LoginOptionsPage.xaml
+++ b/mobile/QR/LoginOptionsPage.xaml
@@ -15,5 +15,11 @@
        TextColor="White"
        CornerRadius="10"
         Clicked="OnAddNewItemClicked"/>
+
+        <Button Text="View Catalops"
+      BackgroundColor="#6A1B9A"
+        TextColor="White"
+        CornerRadius="10"
+          Clicked="OnUsersCatalodsClicked"/>
     </VerticalStackLayout>
 </ContentPage>
